--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
     <script src="bootstrap-switch.min.js"></script>
     <script src="popup.js"></script>
     <style>
-      body{width:200px; padding:20px;}
+      body{width:200px; padding:10px 15px 5px 15px;}
     </style>
   </head>
   <body>
@@ -38,5 +38,7 @@
         </div>
       </div>
     </form>
+    <hr/>
+    <p style="font-size:0.8em">You can use the mouse wheel to set the value.</p>
   </body>
 </html>
